[package]
authors = ["PureStake"]
edition = "2018"
name = "pallet-aura-style-filter"
version = "0.1.0"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
frame-support = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
frame-system = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
sp-core = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
sp-std = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
nimbus-primitives = { path = "../../primitives/nimbus", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "nimbus-primitives/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
