[package]
name = "pallet-author-inherent"
version = "0.1.0"
description = "Inject the block author via an inherent, and persist it via a Consensus digest"
authors = ["PureStake"]
edition = "2018"
license = 'GPL-3.0-only'

[dependencies]
log = { version = "0.4", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.4" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.4" }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.4" }
sp-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.4" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.4" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.4" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.4" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.4" }
nimbus-primitives = { path = "../../primitives/nimbus", default-features = false }
# Only required for the slot beacon impl. This should live somewhere else.
cumulus-pallet-parachain-system = { path = "../parachain-system", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.4" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.4" }

[features]
default = ["std"]
std = [
	"log/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"sp-application-crypto/std",
	"sp-authorship/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-api/std",
	"nimbus-primitives/std",
	"cumulus-pallet-parachain-system/std",
]
