[package]
authors = ["PureStake"]
edition = "2018"
name = "pallet-author-slot-filter"
version = "0.1.0"

[dependencies]
log = { version = "0.4", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
frame-support = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.11" }
frame-system = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.11" }
sp-core = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.11" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.11" }
sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.11", default-features = false }
pallet-author-inherent = { path = "../author-inherent", default-features = false }
cumulus-pallet-parachain-system = { path = "../parachain-system",  default-features = false}
nimbus-primitives = { path = "../../primitives/nimbus", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"log/std",
  "serde",
  "parity-scale-codec/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-author-inherent/std",
  "sp-core/std",
  "sp-runtime/std",
  "cumulus-pallet-parachain-system/std",
  "sp-std/std",
  "nimbus-primitives/std",
]
