[package]
name = "cumulus-pallet-parachain-system"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Base pallet for cumulus-based parachains"

[dependencies]
# Cumulus dependencies
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/purestake/polkadot", default-features = false, features = [ "wasm-api" ], branch = "moonbeam-v0.7" }

# Substrate dependencies
frame-support = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }
pallet-balances = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }
sp-core = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }
sp-inherents = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }
sp-io = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }
sp-std = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }
sp-version = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }
frame-system = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }
sp-state-machine = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }
sp-trie = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }
sp-externalities = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }

# Other Dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
serde = { version = "1.0.101", optional = true, features = ["derive"] }
hash-db = { version = "0.15.2", default-features = false }
log = { version = "0.4.14", default-features = false }
memory-db = { version = "0.26.0", default-features = false }
trie-db = { version = "0.22.0", default-features = false }
environmental = { version = "1.1.2", default-features = false }

[dev-dependencies]
substrate-test-runtime-client = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }
sp-version = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }
cumulus-test-relay-sproof-builder = { path = "../../test/relay-sproof-builder" }
hex-literal = "0.2.1"
lazy_static = "1.4"
sc-client-api = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-v0.7" }
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sc-executor = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
cumulus-test-client = { path = "../../test/client" }
env_logger = "0.7.1"

[features]
default = [ "std" ]
std = [
	"serde",
	"codec/std",
	"frame-support/std",
	"pallet-balances/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"hash-db/std",
	"log/std",
	"memory-db/std",
	"trie-db/std",
	"sp-state-machine/std",
	"sp-trie/std",
	"sp-externalities/std",
	"frame-system/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-parachain-inherent/std",
	"environmental/std",
]
