[package]
name = "statemint-common"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Logic which is common to all Statemint variant runtimes"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External dependencies
codec = { package = 'parity-scale-codec', version = '2.0.0', features = ['derive'], default-features = false }

# Substrate dependencies
sp-consensus-aura = { git = 'https://github.com/purestake/substrate', default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-std = { git = 'https://github.com/purestake/substrate', default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-io = { git = 'https://github.com/purestake/substrate', default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
frame-executive = { git = 'https://github.com/purestake/substrate', default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
frame-support = { git = 'https://github.com/purestake/substrate', default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
frame-system = { git = 'https://github.com/purestake/substrate', default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
pallet-balances = { git = 'https://github.com/purestake/substrate', default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-runtime = { git = 'https://github.com/purestake/substrate', default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
sp-core = { git = 'https://github.com/purestake/substrate', default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
node-primitives = { git = 'https://github.com/purestake/substrate', default-features = false , branch = "crystalin-v0.9.9-block-response-length" }

# Polkadot dependencies
polkadot-runtime-common = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = "release-v0.9.9" }
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = "release-v0.9.9" }

# Local dependencies
pallet-collator-selection = { path = '../../pallets/collator-selection', default-features = false }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-io = { git = 'https://github.com/purestake/substrate', default-features = false , branch = "crystalin-v0.9.9-block-response-length" }
pallet-authorship = { git = 'https://github.com/purestake/substrate', default-features = false , branch = "crystalin-v0.9.9-block-response-length" }

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/purestake/substrate', branch = "crystalin-v0.9.9-block-response-length" }

[features]
default = ["std"]
std = [
	'codec/std',
	'sp-consensus-aura/std',
	'sp-std/std',
	'sp-io/std',
	'frame-support/std',
	'frame-executive/std',
	'frame-system/std',
	'pallet-collator-selection/std',
	'pallet-balances/std',
	'node-primitives/std',
	'polkadot-runtime-common/std',
	'polkadot-primitives/std',
]
