[package]
name = "cumulus-primitives-utility"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-std = { git = "https://github.com/purestake/substrate", default-features = false, branch = "elois-jsonrpsee" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false, branch = "elois-jsonrpsee" }
sp-trie = { git = "https://github.com/purestake/substrate", default-features = false, branch = "elois-jsonrpsee" }
frame-support = { git = "https://github.com/purestake/substrate", default-features = false, branch = "elois-jsonrpsee" }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/purestake/polkadot", default-features = false, branch = "elois-jsonrpsee" }
polkadot-primitives = { git = "https://github.com/purestake/polkadot", default-features = false, branch = "elois-jsonrpsee" }
polkadot-core-primitives = { git = "https://github.com/purestake/polkadot", default-features = false, branch = "elois-jsonrpsee" }
xcm = { git = "https://github.com/purestake/polkadot", default-features = false, branch = "elois-jsonrpsee" }

cumulus-primitives-core = { path = "../core", default-features = false }

# Other dependencies
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }


[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-std/std",
	"polkadot-primitives/std",
	"polkadot-parachain/std",
	"polkadot-core-primitives/std",
	"sp-runtime/std",
	"sp-trie/std",
	"frame-support/std",
	"cumulus-primitives-core/std",
]
