[package]
name = "cumulus-test-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sc-service = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sc-block-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
substrate-test-client = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-test-primitives = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-inherents = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-timestamp = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-state-machine = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
frame-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
pallet-transaction-payment = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
pallet-balances = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }

# Cumulus deps
cumulus-test-runtime = { path = "../runtime" }
cumulus-test-service = { path = "../service" }
cumulus-test-relay-sproof-builder = { path = "../relay-sproof-builder" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-v0.7" }

# Other deps
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [ "derive" ] }
