[package]
name = "cumulus-test-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sc-service = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-block-builder = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-executor = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-executor-common = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
substrate-test-client = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-inherents = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-io = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-timestamp = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
frame-system = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
pallet-transaction-payment = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
pallet-balances = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

# Cumulus deps
cumulus-test-runtime = { path = "../runtime" }
cumulus-test-service = { path = "../service" }
cumulus-test-relay-sproof-builder = { path = "../relay-sproof-builder" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }
polkadot-parachain = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }

# Other deps
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }
